# wyceny

./: .dependency-cruiser.cjs  .gitignore  .prettierignore  .vercelignore  CLAUDE.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  docker-compose.yml  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  vercel.json  vitest.config.ts
apps/web/drizzle/: 0000_goofy_mandrill.sql  0001_heavy_stryfe.sql  0002_shallow_karma.sql  0003_wycena_rls.sql  0004_add_document_table.sql  0005_english_domain_rename.sql  0006_powerful_anita_blake.sql  0007_valuation_approval.sql  (+3 more)
apps/worker/: Dockerfile  pyproject.toml  railway.json  requirements.txt
apps/worker/app/: amount_in_words.py  convert.py  kw.py  main.py  maps.py  photo.py  rcn.py  slownie.py  subject.py
apps/worker/tests/: test_amount_in_words.py  test_convert_to_pdf.py  test_kw_core.py  test_kw_extract.py  test_map_proposal.py  test_maps_core.py  test_photo_core.py  test_photo_process.py  test_rcn_core.py  test_sample_proposal.py  test_slownie.py  test_subject_core.py  test_subject_proposal.py
docs/: HANDOFF.md
docs/architecture/: README.md
docs/superpowers/: HANDOFF-slice-12-parity-wizualne.md  HANDOFF-slice10-ogledziny.md  HANDOFF-slice11-ui-wizard.md  HANDOFF-slice2-rcn-sample-fetch.md  HANDOFF-slice3-sourced-gating.md  HANDOFF-slice4-document-generator.md  HANDOFF-slice5-egib-mpzp.md  HANDOFF-slice6-kw-akt.md  HANDOFF-slice7-cechy-wagi.md  HANDOFF-slice8-f7.md  HANDOFF-slice9-mapy-wms.md
scripts/: check-no-pii.sh
(+214 files in other folders)
