[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "fastapi>=0.138.2",
    "num2words>=0.5.14",
    "python-multipart>=0.0.32",
    "shapely>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
